# chriscummings.github.io

./: .gitignore  CNAME  Pipfile  README.md  generator.py  pyproject.toml
docs/: b.html  index.html  python.html
docs/assets/css/: custom.css
docs/assets/js/: custom.js
docs/datasheets/: index.html
docs/datasheets/ELEGOO DC 5V Relay Module 2022.04.24/4-way relay datasheet/Relay/: Relay.ino
docs/datasheets/ELEGOO DC 5V Relay Module 2022.04.24/8-way relay datasheet/relay8/: relay8.ino
docs/moving/: index.html  main.js  package.json
docs/moving/assets/: index-d3b379d6.js  index-d3b379d6.js.map
docs/moving/data/: legal-weed-2023.geojson
docs/projects/: index.html
docs/tools/: index.html
source/: b.md  footer.html  header.html  index.md  python.md
