[tool.poetry]
name = "chriscummings.github.io"
version = "0.1.0"
description = ""
authors = ["Chris Cummings <chris@chriscummings.net>"]

[tool.poetry.dependencies]
python = "^3.8"
markdown2 = "^2.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
